force-app/main/default/objects/Sport__c/Sport__c.object-meta.xml
<CustomObject>
    <description>Sports available for inclusive program discovery.</description>
    <label>Sport</label>
    <nameField>
        <label>Sport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>