force-app/main/default/objects/Sport__c/fields/Adaptive_Available__c.field-meta.xml
<CustomField>
    <fullName>Adaptive_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptive Options Available</label>
    <type>Checkbox</type>
</CustomField>