force-app/main/default/objects/Sport__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Explicitly approved for public discovery. False by default. Does not grant object or field access.</description>
    <label>Published for Discovery</label>
    <type>Checkbox</type>
</CustomField>