force-app/main/default/objects/Sport__c/fields/Recommended_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Experience_Level__c</fullName>
    <label>Recommended Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Beginner</fullName><default>true</default><label>Beginner</label></value>
            <value><fullName>Intermediate</fullName><default>false</default><label>Intermediate</label></value>
            <value><fullName>Advanced</fullName><default>false</default><label>Advanced</label></value>
            <value><fullName>All Levels</fullName><default>false</default><label>All Levels</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>